--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,9 @@
 <body>
     <!-- Title Section -->
     <header class="header-container">
+        <a href="/">
+            <img src="/static/images/homeIcon.png" alt="Home">
+        </a>
         <text>Eksperter i Teams</text>
     </header>
 
