--- a/templates/results.html
+++ b/templates/results.html
@@ -19,6 +19,9 @@
 <body>
     <!-- Title Section -->
     <header class="header-container">
+        <a href="/">
+            <img src="/static/images/homeIcon.png" alt="Home">
+        </a>
         <text>Resultat</text>
     </header>
 
@@ -56,9 +59,6 @@
                     <td><b><span id="sumResult">0.0</span><b></td>
                 </tr>
             </table>
-
-            <!-- Button Section -->
-            <button class="square-button" onclick="redirect_to_home_page()">Tilbake</button>
         </div>
 
         <!-- Result Pie Chart -->
