recomended got better

--- a/templates/results.html
+++ b/templates/results.html
@@ -55,8 +55,8 @@
                     <td><span id="sliderResultAverageWindSpeed">0.0 m/s</span></td>
                 </tr>
                 <tr>
-                    <td><b>Sum</b></td>
-                    <td><b><span id="sumResult">0.0</span><b></td>
+                    <td><b>Anbefalt Løsning</b></td>
+                    <td><b><span id="recommendedSolution">0.0</span><b></td>
                 </tr>
             </table>
         </div>
