--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,9 @@
     <meta name="Author" content="Martynas Smilingis">
     <title>Energy Barge</title>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/static/images/TabIcon.ico">
+
     <!-- Include the CSS files -->
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/headerStyles.css')}}">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/sliderStyles.css')}}">
