--- a/templates/memes.html
+++ b/templates/memes.html
@@ -7,6 +7,9 @@
     <meta name="Author" content="Martynas Smilingis">
     <title>Memes</title>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/static/images/TabIcon.ico">
+
     <!-- Include the CSS files -->
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/headerStyles.css')}}">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/secretStyle.css')}}">
