--- a/templates/results.html
+++ b/templates/results.html
@@ -7,6 +7,9 @@
     <meta name="Author" content="Martynas Smilingis">
     <title>Resultat</title>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/static/images/TabIcon.ico">
+
     <!-- Include Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
