--- a/static/styles/headerStyles.css
+++ b/static/styles/headerStyles.css
@@ -1,6 +1,6 @@
 /* Adjusting how far down the rest of the body is compared to header container so we see the whole context */
 body {
-    padding-top: 120px;
+    padding-top: 130px;
 }
 
 /* Style for the header container */
@@ -11,15 +11,15 @@ body {
     right: 0;        
     z-index: 1000;   /* Ensures the header stays above other content */
 
-    background-image: url("../images/headerImage.png");
+    background-image: url("../images/headerImageRedundant.jpg");
     background-size: cover;
-    background-position: center 700px;
+    background-position: center 1000px;
     padding: 15px;
     text-align: center;
     
     /* Ensures the pseudo-element doesn't extend outside the header */
     overflow: hidden; 
-    height: 80px;
+    height: 100px;
 }
 
 /* Adding the overlay */
@@ -30,7 +30,7 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.6); /* Black overlay with 50% opacity */
+    background-color: rgba(0, 0, 0, 0.3); /* Black overlay with 50% opacity */
     z-index: -1; /* Ensures the overlay is behind the text and other content */
 }
 
